--- a/CMFTAspNet/Pages/Teams/Create.cshtml
+++ b/CMFTAspNet/Pages/Teams/Create.cshtml
@@ -32,7 +32,13 @@
                 <span asp-validation-for="Team.ThroughputHistory" class="text-danger"></span>
             </div>
 
-            <!-- Dynamic input fields for WorkItemTypes -->
+            <div class="form-group">
+                <label asp-for="Team.WorkItemQuery" class="control-label">Work Item Query:</label>
+                <textarea asp-for="Team.WorkItemQuery" class="form-control" rows="5"></textarea>
+                <span asp-validation-for="Team.WorkItemQuery" class="text-danger"></span>
+            </div>
+
+
             <div class="form-group">
                 <label>Work Item Types:</label>
                 <div id="workItemTypesContainer">
@@ -49,40 +55,11 @@
                 <button type="button" id="addWorkItemType" class="btn btn-primary mt-2">Add Work Item Type</button>
             </div>
 
-            <!-- Dynamic input fields for IgnoredTags -->
             <div class="form-group">
-                <label>Ignored Tags:</label>
-                <div id="ignoredTagsContainer">
-                    @foreach (var ignoredTag in Model.Team?.IgnoredTags ?? new List<string>())
-                    {
-                        <div class="input-group mt-2">
-                            <input type="text" name="Team.IgnoredTags" value="@ignoredTag" class="form-control" />
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-danger remove-field" type="button">Remove</button>
-                            </div>
-                        </div>
-                    }
-                </div>
-                <button type="button" id="addIgnoredTag" class="btn btn-primary mt-2">Add Ignored Tag</button>
+                <label asp-for="Team.AdditionalRelatedField" class="control-label">Additional Related Field:</label>
+                <input asp-for="Team.AdditionalRelatedField" class="form-control" />
+                <span asp-validation-for="Team.AdditionalRelatedField" class="text-danger"></span>
             </div>
-
-            <!-- Dynamic input fields for AdditionalRelatedFields -->
-            <div class="form-group">
-                <label>Additional Related Fields:</label>
-                <div id="additionalFieldsContainer">
-                    @foreach (var additionalField in Model.Team?.AdditionalRelatedFields ?? new List<string>())
-                    {
-                        <div class="input-group mt-2">
-                            <input type="text" name="Team.AdditionalRelatedFields" value="@additionalField" class="form-control" />
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-danger remove-field" type="button">Remove</button>
-                            </div>
-                        </div>
-                    }
-                </div>
-                <button type="button" id="addAdditionalField" class="btn btn-primary mt-2">Add Additional Field</button>
-            </div>
-
 
             <div class="form-group">
                 <label asp-for="Team.WorkTrackingSystem" class="control-label">Work Tracking System:</label>
@@ -102,7 +79,7 @@
 
                         <div class="input-group mt-2">
                             <input type="text" name="Team.WorkTrackingSystemOptions[@i].Key" value="@Model.Team.WorkTrackingSystemOptions[i].Key" class="form-control" placeholder="Key" readonly />
-                            <input type="@inputType" name="Team.WorkTrackingSystemOptions[@i].Value" value="@Model.Team.WorkTrackingSystemOptions[i].Value" class="form-control" placeholder="Value" />
+                            <input type="@inputType" name="Team.WorkTrackingSystemOptions[@i].Value" value="@Model.Team.WorkTrackingSystemOptions[i].Value" class="form-control col-12" placeholder="Value" />
                             <input type="hidden" name="Team.WorkTrackingSystemOptions[@i].Secret" value="@Model.Team.WorkTrackingSystemOptions[i].Secret.ToString()" class="form-control" placeholder="Secret" />
                             <input type="hidden" name="Team.WorkTrackingSystemOptions[@i].Id" value="@Model.Team.WorkTrackingSystemOptions[i].Id" class="form-control" />
                             <input type="hidden" name="Team.WorkTrackingSystemOptions[@i].EntityId" value="@Model.Team.Id" class="form-control" />
@@ -138,25 +115,6 @@
                     '</div>');
             });
 
-            // Function to add IgnoredTag input field
-            $("#addIgnoredTag").click(function () {
-                $("#ignoredTagsContainer").append('<div class="input-group mt-2">' +
-                    '<input type="text" name="Team.IgnoredTags" class="form-control" />' +
-                    '<div class="input-group-append">' +
-                    '<button class="btn btn-outline-danger remove-field" type="button">Remove</button>' +
-                    '</div>' +
-                    '</div>');
-            });
-
-            // Function to add AdditionalField input field
-            $("#addAdditionalField").click(function () {
-                $("#additionalFieldsContainer").append('<div class="input-group mt-2">' +
-                    '<input type="text" name="Team.AdditionalRelatedFields" class="form-control" />' +
-                    '<div class="input-group-append">' +
-                    '<button class="btn btn-outline-danger remove-field" type="button">Remove</button>' +
-                    '</div>' +
-                    '</div>');
-            });
 
             $("#workTrackingSystem").change(function () {
                 var selectedSystem = $(this).val();
@@ -171,7 +129,7 @@
 
                         var html = '<div class="input-group mt-2">' +
                             '<input type="text" name="Team.WorkTrackingSystemOptions[' + index + '].Key" value="' + option.key + '" class="form-control" placeholder="Key" readonly/>' +
-                            '<input type="' + inputType + '" name="Team.WorkTrackingSystemOptions[' + index + '].Value" value="' + option.value + '" class="form-control" placeholder="Value" />' +
+                            '<input type="' + inputType + '" name="Team.WorkTrackingSystemOptions[' + index + '].Value" value="' + option.value + '" class="form-control col-12" placeholder="Value" />' +
                             '<input type="hidden" name="Team.WorkTrackingSystemOptions[' + index + '].Secret" value="' + secretValue + '" class="form-control" placeholder="Secret" />' +
                             '<input type="hidden" name="Team.WorkTrackingSystemOptions[' + index + '].EntityId" value="@Model.Team.Id" class="form-control"  />' +
                             '<div class="input-group-append">' +
@@ -179,6 +137,8 @@
                             '</div>';
                         $("#workTrackingOptionsContainer").append(html);
                     });
+
+                     $('[data-toggle="tooltip"]').tooltip();
                 });
             });
         });
