--- a/CMFTAspNet/Pages/Index.cshtml
+++ b/CMFTAspNet/Pages/Index.cshtml
@@ -16,6 +16,7 @@
         <h2><a asp-page="./Projects/Details" asp-route-id="@project.Id">@project.Name</a></h2>
 
         <table class="table">
+            <caption>Forecast Overview by Project</caption>
             <thead>
                 <tr>
                     <th>Remaining Work</th>
