--- a/Lighthouse/Pages/Projects/Details.cshtml
+++ b/Lighthouse/Pages/Projects/Details.cshtml
@@ -19,7 +19,7 @@
 
         <br>
     }
-    <h5>Last Updated on: @Model.Entity.ProjectUpdateTime.ToString("G")</h5>
+    <h5>Last Updated on: @Model.Entity.ProjectUpdateTime.ToString("d")</h5>
 </div>
 
 <div>
