Get Rank for Jira Issues
Change Feature Order to string from int as Jira is using an alphanumeric string for ranks (LexoGraph).

--- a/Lighthouse/Pages/Projects/Details.cshtml
+++ b/Lighthouse/Pages/Projects/Details.cshtml
@@ -19,7 +19,7 @@
 
         <br>
     }
-    <h5>Last Updated on: @Model.Entity.ProjectUpdateTime.ToString("d")</h5>
+    <h5>Last Updated on: @Model.Entity.ProjectUpdateTime.ToString("g")</h5>
 </div>
 
 <div>
