--- a/Lighthouse/Pages/Teams/Details.cshtml
+++ b/Lighthouse/Pages/Teams/Details.cshtml
@@ -169,7 +169,7 @@
 
 <div id="throughput">
     <h4>Throughput</h4>
-    <h7>Updated on: @Model.Entity.ThroughputUpdateTime.ToString("d")</h7>
+    <h7>Updated on: @Model.Entity.ThroughputUpdateTime.ToString("g")</h7>
     <canvas id="throughputRunChart" width="400" height="150"></canvas>
 </div>
 <div>
